# practice1-devtools

./: .travis.yml  CMakeLists.txt  README.md
include/: filter.h  filters.hpp  matrix.hpp
samples/: CMakeLists.txt  matrix_sample.cpp
src/: filter.cpp  filters_dummy.cpp  filters_fabrics.cpp  filters_factory.cpp  filters_opencv.cpp  filters_zhiltsov.cpp  matrix.cpp
test/: CMakeLists.txt  filter_test.cpp  filters_test.cpp  matrix_test.cpp
